--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,17 @@ h1 {
     display: inline-block;
     padding: 5px 15px;
 }
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    -webkit-transform: translate(-50%, -50%);
+    color: #f7f7f7;
+    font-size: 42px;
+}
+
+.pressed {
+    border-style: inset;
+}
