--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #232D3F;
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(66,36,73,1) 0%, rgba(83,23,235,1) 100%);
     text-align: center;
     font-family: 'Concert One', cursive;
     margin: 0;
@@ -9,6 +10,7 @@ h1 {
     margin: 60px 0;
     font-size: 72px;
     color: #f7f7f7;
+    text-shadow: 8px 7px 3px #292525;
 }
 
 .container {
@@ -100,5 +102,5 @@ h1 {
 }
 
 .game-over {
-    background-color: red;
+    background: red;
 }
