--- a/styles.css
+++ b/styles.css
@@ -131,8 +131,16 @@ h1 {
         font-size: 42px;
     }
 
+    .container {
+        margin: 120px 0;
+    }
+
     .circle, .circle-logo, .btn {
         width: 160px;
         height: 160px;
+    }
+
+    .footer {
+        margin: 40px 0;
     }
 }
